# project_fastapi_server

./: pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/v1/: snippet.py  user.py
app/auth/: auth.py
app/core/: config.py
app/db/: db.py
app/middlewares/: logging.py
app/models/: __init__.py  snippets.py  users.py
app/schemas/: snippets.py
app/services/: auth.py  snippet.py
