[project]
name = "project-aiohttp-server"
version = "0.1.0"
description = "API-приложение для демонстрации код-сниппетов"
authors = [
    {name = "Nikita Bondarev",email = "nikitabondarevvitebsk@yandex.by"}
]
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "fastapi[uvicorn] (>=0.136.1,<0.137.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "greenlet (>=3.5.0,<4.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-jose[cryptogrphy] (>=3.5.0,<4.0.0)",
    "bcrypt (==4.3.0)",
    "pydantic[email] (>=2.13.3,<3.0.0)",
    "python-multipart (>=0.0.27,<0.0.28)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
